--- a/DataDrivenTDAFinalPresentation.qmd
+++ b/DataDrivenTDAFinalPresentation.qmd
@@ -89,7 +89,8 @@ library(DiagrammeR)
 library(transport)
 library(TDA)
 library(RColorBrewer)
-library("Rtsne")
+library(Rtsne)
+library(keras)
 conflicted::conflict_prefer("filter", "dplyr")
 conflicted::conflict_prefer("select", "dplyr")
 conflicted::conflicts_prefer(ggtda::geom_simplicial_complex)
@@ -418,12 +419,10 @@ ggplot(df_tsne, aes(Dim1, Dim2, color = digit)) +
 ```
 
 
-Let’s train the network for 30 epochs, using a default batch size of 32. This means that images from the training set will be presented to the network in batches of 32 at a time, and for each batch, the SGD algorithm will update the network’s weights by an appropriate amount. Then another batch of 32 images will be presented, and so on, until all 60,000 training images in the dataset have been processed, which constitutes one epoch of training. This entire cycle will be repeated for 30 epochs. As training proceeds, the network’s error (loss) on both the training and testing/validation sets will be shown on the left graph, and the accuracy on each of these sets will be shown on the right graph. The accuracy is simply the fraction of input images that the network classifies correctly. A classification is considered correct if the largest output value on the output layer corresponds to the target classification
+
 
 
 # Machine Learning Methods
-
-## Multinomial logistic regression
 
 ## Neural networks
 
@@ -436,20 +435,49 @@ We use feedforward neural network which has the following structure
 ## NN with regularization
 
 :::{.fragement}
-- Depending on a mode, a network can have more weights than the size of training data. This leads to overfitting.
+- Depending on a model, a network can have more weights than the size of training data. This leads to overfitting.
 - We considered two approaches to overfitting
   - Dropout learning: think of RF, randomly removes a fraction of the units in a layer during model fitting
   - Regularization: impose penalties on parameters like lasso, ridge etc
 :::
 
 
+## Specific NN models considered
+
+- NN with dropout regularization
+- NN with ridge regularization
+- NN with lasso regularization 
+
+
+## Multinomial logistic regression
+
+Multinomial logistic regression is equivalent to a NN with just input and output layers. There are no hidden layers. 
+
+- Output layer with softmax
+
+
+
 
 
 # Analysis {#sec-Analysis}
 
+## To be edited 
+Let’s train the network for 30 epochs, using a default batch size of 32. This means that images from the training set will be presented to the network in batches of 32 at a time, and for each batch, the SGD algorithm will update the network’s weights by an appropriate amount. Then another batch of 32 images will be presented, and so on, until all 60,000 training images in the dataset have been processed, which constitutes one epoch of training. This entire cycle will be repeated for 30 epochs. As training proceeds, the network’s error (loss) on both the training and testing/validation sets will be shown on the left graph, and the accuracy on each of these sets will be shown on the right graph. The accuracy is simply the fraction of input images that the network classifies correctly. A classification is considered correct if the largest output value on the output layer corresponds to the target classification
+
+
 
 
 # Results/Future Work {#sec-Results}
+
+```{r}
+#run the Mnist ML method code first, and take results from there
+tibble(
+  method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
+  accuracy = c(mlogit_acc, nn_dropout_accu, nn_ridge_accu, nn_lasso_accu)
+)
+```
+
+
 
 # References {#sec-References}
 
