--- a/DataDrivenTDAFinalPresentation.qmd
+++ b/DataDrivenTDAFinalPresentation.qmd
@@ -118,7 +118,7 @@ $$
 :::
 
 
-```{r}
+```{r, load_data}
 #--------------------------------------------------------
 #----------Load & Preprocess Data------------------------
 #--------------------------------------------------------
@@ -190,7 +190,7 @@ test_images_binarized <- binarize_images(test_images_list)
 
 ## Distribution of training labels
 
-```{r dist_labels, fig.dim=c(10,6)}
+```{r, dist_labels, fig.dim=c(10,6)}
 #--------------------------------------------------------
 #----------Distribution of training labels---------------
 #--------------------------------------------------------
@@ -206,7 +206,7 @@ ggplot(train_df, aes(labels, fill = labels))+
 
 ## Pixel intensity representation of the training set
 
-```{r pixel_intensity, fig.dim=c(10,6)}
+```{r, pixel_intensity, fig.dim=c(10,6)}
 #----------------------------------------------------------
 #-----------Pixel intensity representation-----------------
 #----------------------------------------------------------
@@ -225,7 +225,7 @@ ggplot(train_df_long) +
 
 ## Training data in 2D 
 
-```{r tnse, fig.dim=c(10,6)}
+```{r, tnse, fig.dim=c(10,6)}
 #------------------------------------------------------------
 #----------------distribution of mnist training--------------
 #------------------------------------------------------------
@@ -366,8 +366,6 @@ Let’s train the network for 30 epochs, using a default batch size of 32. This 
 
 # TDA + ML {#sec-TDAML}
 
-
-
 # Analysis {#sec-Analysis}
 
 
@@ -375,8 +373,18 @@ Let’s train the network for 30 epochs, using a default batch size of 32. This 
 
 # Results/Future Work {#sec-Results}
 
-```{r}
+```{r, results}
 #run the Mnist ML method code first, and take results from there
+# ml_results <- tibble(
+#   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
+#   accuracy = c(mlogit_acc, nn_dropout_accu, nn_ridge_accu, nn_lasso_accu)
+# ) 
+# saveRDS(ml_results, "ml_results")
+
+ml_results <- readRDS("ml_results") #still a tibble so easy to edit
+
+ml_results |> 
+  kable(caption = "ML results", digits = 4)
 # tibble(
 #   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
 #   accuracy = c(mlogit_acc, nn_dropout_accu, nn_ridge_accu, nn_lasso_accu)
