--- a/DataDrivenTDAFinalPresentation.qmd
+++ b/DataDrivenTDAFinalPresentation.qmd
@@ -118,7 +118,7 @@ $$
 :::
 
 
-```{r}
+```{r load_data}
 #--------------------------------------------------------
 #----------Load & Preprocess Data------------------------
 #--------------------------------------------------------
@@ -212,6 +212,7 @@ ggplot(train_df, aes(labels, fill = labels))+
 #----------------------------------------------------------
 train_df_long <- train_df |>
   pivot_longer(-labels, names_to  = "covariate", values_to = "intensity")
+
 ggplot(train_df_long) +
   geom_histogram(
     aes(intensity),
@@ -374,7 +375,9 @@ Let’s train the network for 30 epochs, using a default batch size of 32. This 
 
 # Results/Future Work {#sec-Results}
 
-```{r}
+## Tradional ML Results
+
+```{r mlresults, fig.dim=c(10,6)}
 #run the Mnist ML method code first, and take results from there
 # ml_results <- tibble(
 #   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
@@ -384,8 +387,17 @@ Let’s train the network for 30 epochs, using a default batch size of 32. This 
 
 ml_results <- readRDS("ml_results") #still a tibble so easy to edit
 
-ml_results |> 
-  kable(caption = "ML results", digits = 4)
+ml_results |>
+  kbl(
+    digits = 4,
+    booktabs = TRUE,
+    align = "c",
+  ) |>
+  kable_styling(
+    bootstrap_options = c("striped", "hover", "condensed"),
+    full_width = TRUE,
+    position = "center"
+  )
 # tibble(
 #   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
 #   accuracy = c(mlogit_acc, nn_dropout_accu, nn_ridge_accu, nn_lasso_accu)
