--- a/DataDrivenTDAFinalPresentation.qmd
+++ b/DataDrivenTDAFinalPresentation.qmd
@@ -204,6 +204,11 @@ ggplot(train_df, aes(labels, fill = labels))+
 
 ```
 
+:::{.fragement}
+- Around 6000 digits in each class
+- No class imbalance
+:::
+
 ## Pixel intensity representation of the training set
 
 ```{r pixel_intensity, fig.dim=c(10,6)}
@@ -212,7 +217,6 @@ ggplot(train_df, aes(labels, fill = labels))+
 #----------------------------------------------------------
 train_df_long <- train_df |>
   pivot_longer(-labels, names_to  = "covariate", values_to = "intensity")
-
 ggplot(train_df_long) +
   geom_histogram(
     aes(intensity),
@@ -247,7 +251,7 @@ ggplot(df_tsne, aes(Dim1, Dim2, color = digit)) +
   geom_point(alpha = .9)
 ```
 
-We adopt t-distributed Stochastic Neighbor Embedding(t-SNE) to represent the data in 2D.(see  details ![here](https://rpubs.com/TusVasMit/T-SNEExploration))
+We adopt t-distributed Stochastic Neighbor Embedding(t-SNE) to represent the data in 2D.(See details ![here](https://rpubs.com/TusVasMit/T-SNEExploration))
 
 
 
@@ -255,7 +259,7 @@ We adopt t-distributed Stochastic Neighbor Embedding(t-SNE) to represent the dat
 
 ## Neural networks
 
-We use feedforward neural network which has the following structure
+We use feedforward neural network which has the following structure:
 
 - input layer: consists of neurons that receives the input data each neuron in the input layer represents a feature of the input data
 - hidden layer: one or more hidden layers placed between the input and output layers,  responsible for capturing complex patterns
@@ -370,14 +374,18 @@ Let’s train the network for 30 epochs, using a default batch size of 32. This 
 
 # Analysis {#sec-Analysis}
 
+## ML Analysis
 
+## Proposed Method Analysis
+
+## TDA + ML Analysis
 
 
 # Results/Future Work {#sec-Results}
 
-## Tradional ML Results
+## ML Results
 
-```{r mlresults, fig.dim=c(10,6)}
+```{r ml_results}
 #run the Mnist ML method code first, and take results from there
 # ml_results <- tibble(
 #   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
@@ -387,24 +395,13 @@ Let’s train the network for 30 epochs, using a default batch size of 32. This 
 
 ml_results <- readRDS("ml_results") #still a tibble so easy to edit
 
-ml_results |>
-  kbl(
-    digits = 4,
-    booktabs = TRUE,
-    align = "c",
-  ) |>
-  kable_styling(
-    bootstrap_options = c("striped", "hover", "condensed"),
-    full_width = TRUE,
-    position = "center"
-  )
-# tibble(
-#   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
-#   accuracy = c(mlogit_acc, nn_dropout_accu, nn_ridge_accu, nn_lasso_accu)
-# )
+ml_results |> 
+  kable(digits = 4)
 ```
 
+## Propsed Results
 
+## ML + TDA Results
 
 # References {#sec-References}
 
